[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"



[project]
name = "PyFFD"
version = "0.0.1"
authors = [
  { name="Theo SENTAGNE", email="theo.sentagne@gmail.com" },
]
description = "Tools to create FFD operator from point cloud."
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/t-sentagne/PyFFD"
"Bug Tracker" = "https://github.com/t-sentagne/PyFFD/issues"